[tool.poetry]
name = "nonebot-plugin-aising"
version = "0.1.0"
description = "能让b站任何能搜到素材的角色唱歌"
authors = ["CCYellowStar"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/CCYellowStar2/nonebot-plugin-aising"
repository = "https://github.com/CCYellowStar2/nonebot-plugin-aising"

[tool.poetry.dependencies]
python = ">=3.8,<4"
nonebot2 = ">=2.0.0-beta.1"
gradio_client = "^0.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
