[tool.poetry]
name = "nonebot-plugin-aising"
version = "0.1.3a1"
description = "能让b站任何能搜到素材的角色唱歌"
authors = ["CCYellowStar","syagina"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/CCYellowStar2/nonebot-plugin-aising"
repository = "https://github.com/CCYellowStar2/nonebot-plugin-aising"

[tool.poetry.dependencies]
python = ">=3.9,<4"
nonebot2 = ">=2.2.1"
gradio_client = "^0.16.4"
nonebot-adapter-onebot = ">=2.2.3"
nonebot_plugin_localstore = ">=0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
